--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                     <li><a href="#">New Task</a></li>
                     <li><a href="#">Manage</a></li>
                     <li><a href="#">Log out</a></li>
-                    <li><a href="#">Log In</a></li>
+                    <li><a href="{{ url_for('login') }}">Log In</a></li>
                     <li><a href="{{ url_for('register') }}">Register</a></li>
                    
                 </ul>
@@ -46,7 +46,7 @@
             <li><a href="#">New Task</a></li>
             <li><a href="#">Manage</a></li>
             <li><a href="#">Log out</a></li>
-            <li><a href="#">Log In</a></li>
+            <li><a href="{{ url_for('login') }}">Log In</a></li>
             <li><a href="{{ url_for('register') }}">Register</a></li>
            
         </ul>
